Fixed minor spacing in owner dashboard

--- a/frontend/src/components/RestaurantDetails/RestaurantDetails.css
+++ b/frontend/src/components/RestaurantDetails/RestaurantDetails.css
@@ -76,6 +76,7 @@
 .restaurant-basic-info {
   text-align: center;
   font-family: Inter;
+  margin-left: 5px;
 }
 
 .restaurant-name {
